<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<parent>
		<artifactId>common</artifactId>
		<groupId>org.almostrealism</groupId>
		<version>0.67</version>
	</parent>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>16</source>
					<target>16</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<modelVersion>4.0.0</modelVersion>

	<artifactId>ar-hardware</artifactId>

	<dependencies>
		<dependency>
			<groupId>org.almostrealism</groupId>
			<artifactId>ar-collect</artifactId>
			<version>0.67</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.jocl/jocl -->
		<dependency>
			<groupId>org.jocl</groupId>
			<artifactId>jocl</artifactId>
			<version>2.0.4</version>
		</dependency>
	</dependencies>
</project>